[gd_scene load_steps=2 format=2]

[ext_resource path="res://lobby.gd" type="Script" id=1]

[node name="lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="connect" type="Panel" parent="."]
editor/display_folded = true
margin_left = 379.5
margin_top = 188.55
margin_right = 700.5
margin_bottom = 341.55

[node name="name_tag" type="Label" parent="connect"]
margin_left = 22.8
margin_top = 35.15
margin_right = 64.8
margin_bottom = 49.15
text = "Name:"

[node name="username" type="LineEdit" parent="connect/name_tag"]
margin_left = 3.79999
margin_top = 19.75
margin_right = 159.8
margin_bottom = 43.75
hint_tooltip = "
"
text = "user"
placeholder_text = "Enter a username here"

[node name="ip_tag" type="Label" parent="connect"]
margin_left = 24.7
margin_top = 93.1
margin_right = 66.7
margin_bottom = 107.1
text = "IP:"

[node name="ip" type="LineEdit" parent="connect/ip_tag"]
margin_left = 4.0
margin_top = 20.0
margin_right = 172.0
margin_bottom = 44.0
hint_tooltip = "
"
text = "127.0.0.1"
placeholder_text = "Enter valid IPv4 address"

[node name="err" type="Label" parent="connect"]
margin_left = 52.0
margin_top = 10.0
margin_right = 254.0
margin_bottom = 24.0

[node name="host_server" type="Button" parent="connect"]
margin_left = 230.25
margin_top = 44.8
margin_right = 306.25
margin_bottom = 83.8
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Host"

[node name="connect_server" type="Button" parent="connect"]
margin_left = 235.4
margin_top = 116.9
margin_right = 299.4
margin_bottom = 136.9
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Connect"

[node name="players" type="Panel" parent="."]
visible = false
margin_left = 264.0
margin_top = 93.0
margin_right = 761.0
margin_bottom = 365.0

[node name="player_list" type="ItemList" parent="players"]
margin_left = 13.0
margin_top = 44.0
margin_right = 482.0
margin_bottom = 234.0

[node name="title" type="Label" parent="players"]
margin_left = 105.0
margin_top = 3.0
margin_right = 374.0
margin_bottom = 39.0
text = "Lobby Players"
align = 1
valign = 1

[node name="start" type="Button" parent="players"]
margin_left = 381.0
margin_top = 239.0
margin_right = 464.0
margin_bottom = 264.0
text = "Start"

[connection signal="pressed" from="connect/host_server" to="." method="_on_host_server_pressed"]
[connection signal="pressed" from="connect/connect_server" to="." method="_on_connect_server_pressed"]
[connection signal="pressed" from="players/start" to="." method="_on_start_pressed"]
